--- a/my-portfolio/public/index.html
+++ b/my-portfolio/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Taci Shlosberg - I'm a software developer and a traveller who is always learning awesome stuff. I enjoy building beautiful and thoughful experiences. Browse to get in touch."
+      content="Taci Shlosberg - I'm a software developer and a traveler who is always learning awesome stuff. I enjoy building beautiful and thoughful experiences. Browse to get in touch."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
